@startuml

skin rose

title RX Shared Structures - Class Diagram

struct RssiAB {
  float a
  float b
}

struct RssiS2D {
  uint8_t gain
  uint8_t offset
}

struct RssiCalibrationDataVer6_AntennaData {
  std::array<uint16_t, maxNumLnaSubBandsCrossingPointsVer6> subBandsCrossingPoints
  uint8_t firstCrossingPointIndex
  uint8_t lnaMidGain
  std::array<float, maxNumLnaGainStepsVer6> lnaGains
  std::array<int8_t, maxRxRfFlatnessPoints> midGainDeltaPoints
  std::array<int8_t, maxRxRfFlatnessPoints> rxRfFlatnessDeltaPointsHighGain
  std::array<int8_t, maxRxRfFlatnessPoints> rxRfFlatnessDeltaPointsBypass
  std::array<RssiS2D, maxNumRegions> s2dGainOffset
  std::array<RssiAB, maxNumRegions> pointsAB
  std::array<int8_t, maxRxRssiFlatnessPoints> rxRssiFlatnessDeltaPoints
}

struct RssiCalibrationDataVer7_AntennaData {
  std::array<uint16_t, maxNumLnaSubBandsCrossingPointsVer7> subBandsCrossingPoints
  uint8_t firstCrossingPointIndex
  std::array<float, maxNumLnaGainStepsVer7> lnaGains
  std::array<int8_t, maxRxRfFlatnessPoints> rxRfFlatnessDeltaPointsHighGain
  std::array<int8_t, maxRxRfFlatnessPoints> rxRfFlatnessDeltaPointsLowGain
  std::array<int8_t, maxRxRfFlatnessPoints> rxRfFlatnessDeltaPointsBypass
  std::array<RssiS2D, maxNumRegions> s2dGainOffset
  std::array<RssiAB, maxNumRegions> pointsAB
  std::array<int8_t, maxRxRssiFlatnessPoints> rxRssiFlatnessDeltaPoints
}

RssiCalibrationData <|-- RssiCalibrationDataVer6_7
RssiCalibrationDataVer6_7 <|-- RssiCalibrationDataVer6
RssiCalibrationDataVer6_7 <|-- RssiCalibrationDataVer7
RssiCalibrationDataVer6 *-- RssiCalibrationDataVer6_AntennaData
RssiCalibrationDataVer7 *-- RssiCalibrationDataVer7_AntennaData

abstract class RssiCalibrationData {
  +uint16_t channel
  +Band band 
}

abstract class RssiCalibrationDataVer6_7 {
  +AntennaMask antennaMask
  +uint16_t startFreq
  +uint16_t stopFreq
  +uint16_t calibrationFreq
  +uint8_t chipTemperature
  +bool subBandsCrossingPoints
  +uint8_t numRxRfFlatnessPoints
  +uint8_t numRxRssiFlatnessPoints
  +std::array<uint16_t, maxRxRfFlatnessPoints> rxRfFlatnessFreqs
  +std::array<uint16_t, maxRxRssiFlatnessPoints> rxRssiFlatnessFreqs
}

class RssiCalibrationDataVer6 {
  +std::array<AntennaData, maxNumRxAntennas> antennas;
}

class RssiCalibrationDataVer7 {
  +std::array<AntennaData, maxNumRxAntennas> antennas;
}

@enduml